Fix overlapping arrow on mobile

--- a/styles/Week.module.css
+++ b/styles/Week.module.css
@@ -13,7 +13,6 @@
   font-size: 24px;
   font-weight: 700;
   margin-right: 12px;
-  display: inline-block;
 }
 
 .subtitle {
@@ -136,6 +135,10 @@
 @media (min-width: 834px) {
   .header {
     flex-direction: row;
+  }
+
+  .title {
+    display: inline-block;
   }
 
   .subtitle {
